# ai-senior-bussiness-consultant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/acceptance/: phase-2-checklist.md
docs/plans/: 2026-07-17-ai-senior-business-consultant-design.md  2026-07-17-phase-1-implementation-plan.md  2026-07-17-phase-1-technical-contracts.md  2026-07-20-phase-2-business-loop-design.md  2026-07-20-phase-2-implementation-plan.md
docs/runbooks/: phase-2-local-and-pilot.md
evals/: README.md  metrics.py  run.py
evals/datasets/: phase1.jsonl  phase2.jsonl
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_phase_two_business_loop.py
scripts/: demo-phase2.sh  demo.sh
src/consultant/: __init__.py  cli.py  config.py  main.py  worker.py
tests/contract/: test_agent_sse.py  test_approvals_api.py  test_business_loop_api.py  test_deliverables_api.py  test_dify_adapter.py  test_documents_api.py  test_exports_api.py  test_model_adapter.py  test_projects_api.py
tests/e2e/: test_demo_flow.py
tests/security/: test_business_loop_acl.py  test_knowledge_redaction.py  test_object_access.py  test_phase_two_data_boundaries.py  test_project_authorization.py  test_prompt_injection.py  test_retrieval_acl.py  test_sensitive_logging.py
tests/unit/: test_health.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
web/app/: globals.css  layout.tsx  (+1 more)
(+144 files in other folders)
