[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-senior-business-consultant"
version = "0.1.0"
description = "Production-oriented AI senior business consultant agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain-core>=0.3,<2",
  "langgraph>=0.4,<2",
  "pgvector>=0.3,<1",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-multipart>=0.0.20,<1",
  "python-docx>=1.1,<2",
  "redis>=5,<8",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consultant"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["consultant"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true
